# nes

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cpu/: Cargo.toml
crates/cpu/src/: fetch.rs  instruction.rs  lib.rs  register.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  system.rs  system_ppu_registers.rs  video.rs
crates/pad/: Cargo.toml
crates/ppu/: Cargo.toml
crates/ppu/src/: lib.rs  register.rs  video.rs
crates/rom/: Cargo.toml
crates/rom/src/: lib.rs
examples/nes-desktop-example-app/: Cargo.toml
examples/nes-desktop-example-app/src/: main.rs
src/: cpu.rs  errors.rs  lib.rs
tests/: test.rs
